--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
         "@types/jest": "27.5.2",
         "@types/node": "16.18.3",
         "@types/react": "18.0.25",
+        "@types/react-cookies": "^0.1.0",
         "@types/react-dom": "18.0.9",
         "@types/react-router-dom": "5.3.3",
         "@types/styled-components": "5.1.26",
         "prettier": "2.7.1",
         "react": "18.2.0",
+        "react-cookie": "^4.1.1",
         "react-dom": "18.2.0",
         "react-leaflet": "4.1.0",
         "react-router-dom": "6.4.3",
