--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@types/react-dom": "18.0.9",
         "@types/react-router-dom": "5.3.3",
         "@types/styled-components": "5.1.26",
+        "axios": "^1.2.1",
         "leaflet": "^1.9.3",
         "prettier": "2.7.1",
         "react": "18.2.0",
